module(
    name = "formatjs",
    version = "1.0",
)

######### Bazel core rules #########

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_shell", version = "0.8.0")

######### JS & Node.js rules #########

bazel_dep(name = "aspect_rules_js", version = "3.1.1")

####### Node.js version #########
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
bazel_dep(name = "rules_nodejs", version = "6.7.4")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(
    node_repositories = {
        "24.14.0-darwin_arm64": ("node-v24.14.0-darwin-arm64.tar.gz", "node-v24.14.0-darwin-arm64", "a1a54f46a750d2523d628d924aab61758a51c9dad3e0238beb14141be9615dd3"),
        "24.14.0-darwin_amd64": ("node-v24.14.0-darwin-x64.tar.gz", "node-v24.14.0-darwin-x64", "f2879eb810e25993a0578e5d878930266fd2eafcffe9f2839b3d8db354d4879e"),
        "24.14.0-linux_arm64": ("node-v24.14.0-linux-arm64.tar.xz", "node-v24.14.0-linux-arm64", "e7adfca03d9173276114a6f2219df1a7d25e1bfd6bbd771d3f839118a2053094"),
        "24.14.0-linux_amd64": ("node-v24.14.0-linux-x64.tar.xz", "node-v24.14.0-linux-x64", "41cd79bb7877c81605a9e68ec4c91547774f46a40c67a17e34d7179ef11729df"),
        "24.14.0-windows_amd64": ("node-v24.14.0-win-x64.zip", "node-v24.14.0-win-x64", "313fa40c0d7b18575821de8cb17483031fe07d95de5994f6f435f3b345f85c66"),
    },
    node_version = "24.14.0",
)

#################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//:patches/@types__mdx.patch",
        "//:patches/@vue+compiler-sfc.patch",
        "//:patches/unicode-match-property-ecmascript@2.0.0.patch",
        "//:patches/unicode-match-property-value-ecmascript@2.2.1.patch",
    ],
    npmrc = "//:.npmrc",
    patch_args = {"*": ["-p1"]},
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Choose a different version of pnpm - note that only the "root" module may do this,
# not some transitive dependency.
pnpm.pnpm(
    name = "pnpm",
    pnpm_version = "10.4.1",
)

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")

######### TypeScript rules #########

bazel_dep(name = "aspect_rules_ts", version = "3.8.9")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_integrity = "sha512-y2TvuxSZPDyQakkFRPZHKFm+KKVqIisdg9/CZwm9ftvKXLP8NRWj38/ODjNbr43SsoXqNuAisEf1GdCxqWcdBw==",
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

######### Bazel lib rules #########

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

######### Multirun rules #########

bazel_dep(name = "rules_multirun", version = "0.13.0")

######### buildifier rules #########

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.5.1.2",
    dev_dependency = True,
)

######### Protobuf rules #########

bazel_dep(name = "protobuf", version = "34.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_proto", version = "7.1.0")
# Force protobuf's transitive Android rules past Bazel 9 CcInfo compatibility fixes.
bazel_dep(name = "rules_android", version = "0.7.2")

######### Go + Gazelle #########

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.12")

######### gazelle_ts (TypeScript Gazelle extension) #########

bazel_dep(name = "gazelle_ts", version = "0.4.18")

######### Rust rules #########

bazel_dep(name = "rules_rs", version = "0.0.73")
bazel_dep(name = "llvm", version = "0.8.0")
bazel_dep(name = "with_cfg.bzl", version = "0.14.6")

llvm_toolchain = use_extension("@llvm//extensions:toolchain.bzl", "toolchain")
use_repo(llvm_toolchain, "llvm_toolchains")

register_toolchains("@llvm_toolchains//:all")

toolchains = use_extension("@rules_rs//rs/toolchains:module_extension.bzl", "toolchains")
toolchains.toolchain(
    edition = "2024",
    version = "1.95.0",
)
use_repo(toolchains, "default_rust_toolchains")

# Optional rules_rust facade — keeps existing @rules_rust references working
# (rules_rust_wasm_bindgen, downstream BUILDs that load @rules_rust//... etc.).
rules_rust_ext = use_extension("@rules_rs//rs:rules_rust.bzl", "rules_rust")
use_repo(rules_rust_ext, "rules_rust")

register_toolchains(
    "@default_rust_toolchains//:all",
)

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lock = "//:Cargo.lock",
    cargo_toml = "//:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "aarch64-unknown-linux-musl",
        "x86_64-apple-darwin",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
        "x86_64-unknown-linux-musl",
    ],
)
use_repo(crate, "crates")

rules_rust_prost = use_extension("@rules_rs//rs:rules_rust_prost.bzl", "rules_rust_prost")
use_repo(rules_rust_prost, "rules_rust_prost")

register_toolchains("@rules_rust_prost//:default_prost_toolchain")

######### Java rules #########

bazel_dep(name = "rules_java", version = "9.6.1")

########## BuildBuddy toolchain rules #########

bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")

use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")

register_toolchains(
    "@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_x86_64",
)

######### test262 rules #########

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

IANA_TZ_VERSION = "2026b"

CLDR_COMMON_VERSION = "48.1"

http_archive(
    name = "cldr_common",
    build_file = "@//packages/intl-collator:cldr-common.BUILD.bazel",
    sha256 = "c691e94f217486fed259871429ae71cc4855e8a7f22b1586eb6eb52262c9c307",
    urls = ["https://www.unicode.org/Public/cldr/%s/cldr-common-%s.zip" % (CLDR_COMMON_VERSION, CLDR_COMMON_VERSION)],
)

http_archive(
    name = "iana_tzcode",
    build_file = "@//packages/intl-datetimeformat:tzcode.BUILD.bazel",
    sha256 = "37e9ed8427f5d3521c22fc58e293cbfb043d70eedf1003870b33f363f61ca344",
    urls = ["https://data.iana.org/time-zones/releases/tzcode%s.tar.gz" % IANA_TZ_VERSION],
)

http_archive(
    name = "iana_tzdata",
    build_file = "@//packages/intl-datetimeformat:tzdata.BUILD.bazel",
    sha256 = "114543d9f19a6bfeb5bca43686aea173d38755a3db1f2eec112647ae92c6f544",
    urls = ["https://data.iana.org/time-zones/releases/tzdata%s.tar.gz" % IANA_TZ_VERSION],
)

TEST262_COMMIT = "ade328d530525333751e8a3b58f02e18624da085"

http_archive(
    name = "com_github_tc39_test262",
    build_file = "@//:test262.BUILD",
    sha256 = "f4915077f38016d0f20ad8cbeaeec4e3d4a5eca3a98a895e01653f3375802a4b",
    strip_prefix = "tc39-test262-%s" % TEST262_COMMIT[:7],
    type = "tar.gz",
    urls = ["https://github.com/tc39/test262/tarball/%s" % TEST262_COMMIT],
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "DerivedCombiningClass",
    sha256 = "191463abfbd202703c6fd6776a92a23ac44ec65e0476a7f95aa91ca492cef29b",
    url = "https://www.unicode.org/Public/17.0.0/ucd/extracted/DerivedCombiningClass.txt",
)

http_file(
    name = "DerivedEastAsianWidth",
    sha256 = "0b5523a2217cb318d20b329a05d31eec5af5686ba09d263b85bb75a28989a3a8",
    url = "https://www.unicode.org/Public/17.0.0/ucd/extracted/DerivedEastAsianWidth.txt",
)

http_file(
    name = "GraphemeBreakProperty",
    sha256 = "d6b51d1d2ae5c33b451b7ed994b48f1f4dc62b2272a5831e7fd418514a6bae89",
    url = "https://www.unicode.org/Public/17.0.0/ucd/auxiliary/GraphemeBreakProperty.txt",
)

http_file(
    name = "GraphemeBreakTest",
    sha256 = "e2d134d2c52919bace503ebb6a551c1855fe1a1faec18478c78fff254a1793ec",
    url = "https://www.unicode.org/Public/17.0.0/ucd/auxiliary/GraphemeBreakTest.txt",
)

http_file(
    name = "IndicSyllabicCategory",
    sha256 = "3fc122f4cf58b0c19268d5f810263b04ab4e1e67743386ec0e0ada9c76aec5be",
    url = "https://www.unicode.org/Public/17.0.0/ucd/IndicSyllabicCategory.txt",
)

http_file(
    name = "SentenceBreakProperty",
    sha256 = "871c0c985ad95125e25b302414065a10839d068970bceb383ecec138f22a0a18",
    url = "https://www.unicode.org/Public/17.0.0/ucd/auxiliary/SentenceBreakProperty.txt",
)

http_file(
    name = "SentenceBreakTest",
    sha256 = "12cb47d028ded0c1cb8a28558f95479cbcd24559c46977015c82f3b50a1cc6e4",
    url = "https://www.unicode.org/Public/17.0.0/ucd/auxiliary/SentenceBreakTest.txt",
)

http_file(
    name = "WordBreakProperty",
    sha256 = "72274cac1e6b919507db35655c3e175aa27274668a1ece95c28d2069f2ad9852",
    url = "https://www.unicode.org/Public/17.0.0/ucd/auxiliary/WordBreakProperty.txt",
)

http_file(
    name = "WordBreakTest",
    sha256 = "1de23a75f37904abc7d206239ee8d34f8fdf0fb4ab32a7174dfbabbde25419b2",
    url = "https://www.unicode.org/Public/17.0.0/ucd/auxiliary/WordBreakTest.txt",
)

http_file(
    name = "emoji-data",
    sha256 = "2cb2bb9455cda83e8481541ecf5b6dfda66a3bb89efa3fa7c5297eccf607b72b",
    url = "https://www.unicode.org/Public/17.0.0/ucd/emoji/emoji-data.txt",
)

http_file(
    name = "DerivedCoreProperties",
    sha256 = "24c7fed1195c482faaefd5c1e7eb821c5ee1fb6de07ecdbaa64b56a99da22c08",
    url = "https://www.unicode.org/Public/17.0.0/ucd/DerivedCoreProperties.txt",
)

######### ast-grep for structural linting #########

AST_GREP_VERSION = "0.42.1"

http_archive(
    name = "ast_grep_darwin_arm64",
    build_file = "@//tools:ast_grep.BUILD",
    sha256 = "c3961d8e8a4ee0ce2d0d98c7beeb168bb331cdc766b53630118a7b6c4fd39015",
    url = "https://github.com/ast-grep/ast-grep/releases/download/%s/app-aarch64-apple-darwin.zip" % AST_GREP_VERSION,
)

http_archive(
    name = "ast_grep_linux_x86_64",
    build_file = "@//tools:ast_grep.BUILD",
    sha256 = "5de8b87cba67fc8dc3e239d54b6484802ad745a7ae3de76be4fe89661dc52657",
    url = "https://github.com/ast-grep/ast-grep/releases/download/%s/app-x86_64-unknown-linux-gnu.zip" % AST_GREP_VERSION,
)

######### ICU4J for conformance testing #########

http_file(
    name = "icu4j_jar",
    downloaded_file_path = "icu4j-78.1.jar",
    sha256 = "bbb70d3be23110d7295823eee0c2e896ac3b619b3c0f26168f65eb972df51d2a",
    url = "https://github.com/unicode-org/icu/releases/download/release-78.1/icu4j-78.1.jar",
)
