"""rules_formatjs - Bazel rules for FormatJS internationalization"""

module(
    name = "rules_formatjs",
    version = "0.0.0",
    compatibility_level = 1,
)

# jq for JSON manipulation in aggregation aspect
bazel_dep(name = "jq.bzl", version = "0.4.0")

# Required dependencies (consumers must provide @npm repository with @formatjs/cli)
bazel_dep(name = "aspect_rules_js", version = "2.8.3")
bazel_dep(name = "rules_nodejs", version = "6.3.0")
