# gazelle:ignore
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_js//js:defs.bzl", "js_test")
load("//tools:index.bzl", "ts_binary")
load("//tools:vitest.bzl", "vitest")

exports_files([
    "ast_grep_test.sh",
    "supported-locales-gen.ts",
])

copy_to_bin(
    name = "check_no_internal_imports",
    srcs = ["check_no_internal_imports.ts"],
    visibility = ["//visibility:public"],
)

copy_to_bin(
    name = "check_package_exports",
    srcs = ["check_package_exports.ts"],
    visibility = ["//visibility:public"],
)

vitest(
    name = "unit_test",
    srcs = [
        "check_package_exports.test.ts",
        "check_package_exports.ts",
    ],
    deps = [
        "//:node_modules/@types/minimist",
        "//:node_modules/minimist",
    ],
)

copy_to_bin(
    name = "vitest_config_mjs",
    srcs = ["vitest.config.mjs"],
    visibility = ["//visibility:public"],
)

copy_to_bin(
    name = "check_package_json",
    srcs = ["check_package_json.ts"],
    visibility = ["//visibility:public"],
)

copy_to_bin(
    name = "check_cli_native_abi",
    srcs = ["check_cli_native_abi.ts"],
    visibility = ["//visibility:public"],
)

CLI_NATIVE_ABI_TEST_DATA = [
    "//:release-please-config.json",
    "//crates/formatjs_cli_napi:native_abi.json",
    "//crates/formatjs_cli_napi:src/lib.rs",
    "//packages/cli-native-darwin-arm64:native_abi.json",
    "//packages/cli-native-darwin-arm64:package.json",
    "//packages/cli-native-linux-arm64:native_abi.json",
    "//packages/cli-native-linux-arm64:package.json",
    "//packages/cli-native-linux-x64:native_abi.json",
    "//packages/cli-native-linux-x64:package.json",
    "//packages/cli-native-win32-x64:native_abi.json",
    "//packages/cli-native-win32-x64:package.json",
]

js_test(
    name = "cli_native_abi_test",
    size = "small",
    args = [
        "--central-abi",
        "$(rootpath //crates/formatjs_cli_napi:native_abi.json)",
        "--rust-lib",
        "$(rootpath //crates/formatjs_cli_napi:src/lib.rs)",
        "--release-config",
        "$(rootpath //:release-please-config.json)",
        "--package-abi",
        "$(rootpath //packages/cli-native-darwin-arm64:native_abi.json)",
        "--package-json",
        "$(rootpath //packages/cli-native-darwin-arm64:package.json)",
        "--package-abi",
        "$(rootpath //packages/cli-native-linux-arm64:native_abi.json)",
        "--package-json",
        "$(rootpath //packages/cli-native-linux-arm64:package.json)",
        "--package-abi",
        "$(rootpath //packages/cli-native-linux-x64:native_abi.json)",
        "--package-json",
        "$(rootpath //packages/cli-native-linux-x64:package.json)",
        "--package-abi",
        "$(rootpath //packages/cli-native-win32-x64:native_abi.json)",
        "--package-json",
        "$(rootpath //packages/cli-native-win32-x64:package.json)",
    ],
    data = [
        "//:node_modules/minimist",
    ] + CLI_NATIVE_ABI_TEST_DATA,
    entry_point = ":check_cli_native_abi",
    no_copy_to_bin = CLI_NATIVE_ABI_TEST_DATA,
    node_options = ["--experimental-transform-types"],
)

ts_binary(
    name = "rolldown-bundle-bin",
    data = [
        "//:node_modules/minimist",
        "//:node_modules/rolldown",
        "//:node_modules/rolldown-plugin-dts",
    ],
    entry_point = "rolldown-bundle.ts",
    visibility = ["//visibility:public"],
)

ts_binary(
    name = "generate-supported-locales",
    data = [
        "//:node_modules/fs-extra",
        "//:node_modules/minimist",
    ],
    entry_point = "generate-supported-locales.ts",
    visibility = ["//visibility:public"],
)

ts_binary(
    name = "generate-cldr-locales",
    data = [
        "//:node_modules/fast-glob",
        "//:node_modules/fs-extra",
        "//:node_modules/minimist",
    ],
    entry_point = "generate-cldr-locales.ts",
    visibility = ["//visibility:public"],
)

ts_binary(
    name = "generate-package-tsconfigs",
    data = [
        "//:node_modules/fs-extra",
        "//:node_modules/minimist",
    ],
    entry_point = "generate-package-tsconfigs.ts",
    visibility = ["//visibility:public"],
)
