# gazelle:ignore
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("//tools:index.bzl", "ts_binary")
load("//tools:package_json.bzl", "formatjs_package_json")
load("//tools:vitest.bzl", "vitest")

exports_files([
    "ast_grep_test.sh",
    "supported-locales-gen.ts",
])

copy_to_bin(
    name = "check_no_internal_imports",
    srcs = ["check_no_internal_imports.ts"],
    visibility = ["//visibility:public"],
)

copy_to_bin(
    name = "check_package_exports",
    srcs = ["check_package_exports.ts"],
    visibility = ["//visibility:public"],
)

vitest(
    name = "unit_test",
    srcs = [
        "check_package_exports.test.ts",
        "check_package_exports.ts",
        "generate-package-json.test.ts",
        "generate-package-json.ts",
    ],
    deps = [
        "//:node_modules/@types/minimist",
        "//:node_modules/minimist",
    ],
)

formatjs_package_json(
    name = "package_json_fixture",
    out = "package-json-fixture/package.json",
    package_name = "@formatjs/package-json-fixture",
    version = "0.0.0",
    type = "module",
    peer_deps = [
        "//:node_modules/react",
    ],
    tags = ["manual"],
    deps = [
        "//:node_modules/minimist",
        "//packages/ecma402-abstract",
    ],
)

copy_to_bin(
    name = "vitest_config_mjs",
    srcs = ["vitest.config.mjs"],
    visibility = ["//visibility:public"],
)

copy_to_bin(
    name = "check_package_json",
    srcs = ["check_package_json.ts"],
    visibility = ["//visibility:public"],
)

ts_binary(
    name = "rolldown-bundle-bin",
    data = [
        "//:node_modules/minimist",
        "//:node_modules/rolldown",
        "//:node_modules/rolldown-plugin-dts",
    ],
    entry_point = "rolldown-bundle.ts",
    visibility = ["//visibility:public"],
)

ts_binary(
    name = "generate-supported-locales",
    data = [
        "//:node_modules/fs-extra",
        "//:node_modules/minimist",
    ],
    entry_point = "generate-supported-locales.ts",
    visibility = ["//visibility:public"],
)

ts_binary(
    name = "generate-cldr-locales",
    data = [
        "//:node_modules/fast-glob",
        "//:node_modules/fs-extra",
        "//:node_modules/minimist",
    ],
    entry_point = "generate-cldr-locales.ts",
    visibility = ["//visibility:public"],
)

ts_binary(
    name = "generate-package-tsconfigs",
    data = [
        "//:node_modules/fs-extra",
        "//:node_modules/minimist",
    ],
    entry_point = "generate-package-tsconfigs.ts",
    visibility = ["//visibility:public"],
)

ts_binary(
    name = "generate-package-json",
    data = [
        "//:node_modules/minimist",
    ],
    entry_point = "generate-package-json.ts",
    visibility = ["//visibility:public"],
)
