# Temporarily disabled - Docusaurus has been removed in favor of new docs site
# load("@npm//:@docusaurus/core/package_json.bzl", docusaurus_bin = "bin")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

# docusaurus_bin.docusaurus(
#     name = "dist",
#     srcs = [...],
#     args = ["build"],
#     chdir = package_name(),
#     out_dirs = ["build"],
# )

# docusaurus_bin.docusaurus_binary(
#     name = "serve",
#     args = ["start"],
#     chdir = package_name(),
#     data = [...],
# )

# docusaurus_bin.docusaurus_binary(
#     name = "deploy",
#     args = ["deploy"],
#     chdir = package_name(),
#     data = [...],
# )
